r3 refactored for more depth arkitehturi

--- a/dev/client/index.html
+++ b/dev/client/index.html
@@ -4,7 +4,7 @@
     <title>Angular 2 QuickStart</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="dev/client/assets/styles.css">
+    <link rel="stylesheet" href="assets/styles.css">
   </head>
   <body>
     <my-app>Loading...</my-app>
